Guard against conflicting JNA version Allow installer and app to run even when a newer version of JNA is installed on $PATH Closes #577

--- a/ant/project.properties
+++ b/ant/project.properties
@@ -7,7 +7,7 @@ project.name=QZ Tray
 project.filename=qz-tray
 project.datadir=qz
 
-launch.opts=-Xms512m
+launch.opts=-Xms512m -Djna.nosys=true
 
 src.dir=${basedir}/src
 out.dir=${basedir}/out
