--- a/ant/apple/apple-preinstall.sh.in
+++ b/ant/apple/apple-preinstall.sh.in
@@ -10,7 +10,7 @@ pushd "$DIR/payload/Contents/MacOS/"
 # Offer to download Java if missing
 if ! ./"${project.name}" --version; then
     osascript -e "tell app \"Installer\" to display dialog \"Java is required.  Please install Java and try again.\""
-    sudo -u "$(logname || echo "$SUDO_USER")" open "${java.download}"
+    open "${java.download}"
     exit 1
 fi
 
