Use Monocle's javafx.graphics.jar - Disables software rendering - Share fx properties between code & tests

--- a/ant/project.properties
+++ b/ant/project.properties
@@ -35,6 +35,7 @@ javac.source=1.7
 javac.target=1.7
 javafx.version=11.0.2
 javafx.mirror=https://gluonhq.com/download
+monocle.mirror=https://s3-eu-west-1.amazonaws.com/software.gluonhq.com/javafx/support/supqz/supqz-3
 java.download=https://adoptopenjdk.net/?variant=openjdk11
 
 manifest.application.name=${project.name}
