WIP - First attempt at a signed uninstaller

--- a/ant/windows/windows-installer.nsi.in
+++ b/ant/windows/windows-installer.nsi.in
@@ -11,7 +11,6 @@
 !include FindJava.nsh
 !include StdUtils.nsh
 
-
 Name "${project.name}"
 OutFile "${out.dir}/${project.filename}${build.type}-${build.version}.exe"
 RequestExecutionLevel admin
@@ -20,9 +19,9 @@ RequestExecutionLevel admin
 
 ; Branding for qz only
 !if "${project.filename}" == "qz-tray"
-    !define MUI_UNICON "${basedir}/ant/windows/nsis/uninstall.ico"
+    ;;;;; !define MUI_UNICON "${basedir}/ant/windows/nsis/uninstall.ico"
     !define MUI_WELCOMEFINISHPAGE_BITMAP "${basedir}\ant\windows\nsis\welcome.bmp"
-    !define MUI_UNWELCOMEFINISHPAGE_BITMAP "${basedir}\ant\windows\nsis\welcome.bmp"
+    ;;;;; !define MUI_UNWELCOMEFINISHPAGE_BITMAP "${basedir}\ant\windows\nsis\welcome.bmp"
 !endif
 
 !insertmacro MUI_PAGE_WELCOME
@@ -82,7 +81,7 @@ Section
 
     ; Create the uninstaller
     SetOutPath $INSTDIR
-    WriteUninstaller "$INSTDIR\uninstall.exe" ; Backslash required
+    ;;;;; WriteUninstaller "$INSTDIR\uninstall.exe" ; Backslash required
 
     ; Run preinstall tasks
     SetOutPath "$PluginsDir\tmp"
@@ -103,25 +102,25 @@ Section
     ${StdUtils.ExecShellAsUser} $0 "$INSTDIR\${project.filename}.exe" "open" ""
 SectionEnd
 
-Section "Uninstall"
-    DetailPrint "Uninstalling..."
-
-    ; Set the $java variable
-    TryAgain:
-    Call un.FindJava
-    !insertmacro VerifyJava "TryAgain"
-
-    ; Run uninstall tasks
-    SetOutPath $INSTDIR
-    !insertmacro QzInstaller "uninstall" "" ""
-
-    ; Remove all files
-    DetailPrint "Removing all files..."
-    SetDetailsPrint none ; Temporarily suppress details
-    SetOutPath $TEMP
-    RMDir /r "$INSTDIR"
-    SetDetailsPrint both
-SectionEnd
+;;;;;Section "Uninstall"
+;;;;;    DetailPrint "Uninstalling..."
+;;;;;
+;;;;;    ; Set the $java variable
+;;;;;    TryAgain:
+;;;;;    Call un.FindJava
+;;;;;    !insertmacro VerifyJava "TryAgain"
+;;;;;
+;;;;;    ; Run uninstall tasks
+;;;;;    SetOutPath $INSTDIR
+;;;;;    !insertmacro QzInstaller "uninstall" "" ""
+;;;;;
+;;;;;    ; Remove all files
+;;;;;    DetailPrint "Removing all files..."
+;;;;;    SetDetailsPrint none ; Temporarily suppress details
+;;;;;    SetOutPath $TEMP
+;;;;;    RMDir /r "$INSTDIR"
+;;;;;    SetDetailsPrint both
+;;;;;SectionEnd
 
 !macro Init
     ${If} ${RunningX64}
@@ -142,7 +141,7 @@ Function .onInit
     !insertmacro Init
 FunctionEnd
 
-; Runs for uninstall
-Function un.onInit
-    !insertmacro Init
-FunctionEnd
+;;;;;; Runs for uninstall
+;;;;;Function un.onInit
+;;;;;    !insertmacro Init
+;;;;;FunctionEnd
