--- a/ant/windows/windows-uninstaller.nsi.in
+++ b/ant/windows/windows-uninstaller.nsi.in
@@ -1,5 +1,8 @@
+!include MUI2.nsh
 !include x64.nsh
 !include LogicLib.nsh
+!include FileFunc.nsh
+!include WinMessages.nsh
 
 !ifdef NSIS_UNICODE
 	!addplugindir "${basedir}/ant/windows/nsis/Plugins/Release_Unicode"
@@ -8,55 +11,96 @@
 !endif
 !addincludedir "${basedir}/ant/windows/nsis/Include"
 !include StdUtils.nsh
+!include SetTitleBar.nsh
+!include FindJava.nsh
 
-; Run this exe as non-admin
-RequestExecutionLevel admin
-
+!define MUI_PRODUCT "${project.name}"
+!define MUI_VERSION "${build.version}"
 !define MUI_ICON "${basedir}/ant/windows/nsis/uninstall.ico"
 
-; Application information
+!define MUI_PAGE_HEADER_TEXT "Uninstall ${project.name}"
+!define MUI_PAGE_HEADER_SUBTEXT "Remove ${project.name} from your computer"
+!define MUI_INSTFILESPAGE_FINISHHEADER_TEXT "Uninstallation Complete"
+!define MUI_INSTFILESPAGE_FINISHHEADER_SUBTEXT "Uninstall was completed successfully."
+
+!insertmacro MUI_PAGE_INSTFILES
+!insertmacro MUI_LANGUAGE "English"
+!insertmacro GetParameters
+
+RequestExecutionLevel admin
+CRCCheck On
+
 Name "Uninstall ${project.name}"
 Caption "Uninstall ${project.name}"
 Icon "${basedir}/ant/windows/nsis/uninstall.ico"
 OutFile "${dist.dir}/uninstall.exe"
- 
-;;;;; SilentInstall silent
-;;;;; AutoCloseWindow true
-;;;;; ShowInstDetails nevershow
 
-; Full path to jar
-!define JAR "$EXEDIR/${project.filename}.jar"
+Var /GLOBAL RESPAWN
+Var /GLOBAL DELETE_DIR
+Var /GLOBAL DELETE_EXE
 
 Section
+  ${SetTitlebar} "Uninstall"
+  SetDetailsPrint textonly
+  DetailPrint "Uninstalling"
+  SetDetailsPrint listonly
+
+  ${GetParameters} $0
+  ${GetOptions} "$0" "/RESPAWN=" $RESPAWN
+  ${GetOptions} "$0" "/DELETE_DIR=" $DELETE_DIR
+  ${GetOptions} "$0" "/DELETE_EXE=" $DELETE_EXE
+
+  ${If} $RESPAWN != ""
+    ; We're running from $TEMP; Perform the uninstall
+
     ; Set environmental variable for silent uninstall to be picked up by Java
     ${If} ${Silent}
       System::Call 'Kernel32::SetEnvironmentVariable(t, t)i ("${vendor.name}_silent", "1").r0'
     ${EndIf}
 
-    DetailPrint "Uninstalling..."
-    SetOutPath $EXEDIR
+    ; Set $javaw variable
+    Call FindJava
+
+    ; Run uninstall step using jar
+    SetDetailsPrint textonly
+    DetailPrint "Running uninstall..."
+    SetDetailsPrint none ; Temporarily suppress details
+    SetOutPath $DELETE_DIR
     SetDetailsPrint listonly
-    DetailPrint '$EXEDIR\${project.filename}.exe uninstall'
-    SetDetailsPrint both
+    DetailPrint 'Running uninstall: "$java" ${launch.opts} -jar "$DELETE_DIR\${project.filename}.jar" uninstall'
     ClearErrors
-    nsExec::ExecToLog '$EXEDIR\${project.filename}.exe uninstall'
+    nsExec::ExecToLog '"$java" ${launch.opts} -jar "$DELETE_DIR\${project.filename}.jar" uninstall'
     Pop $0
     ${If} "$0" != "0"
-        Abort "Uninstall failed.  Please check log for details."
+        Abort "Uninstall failed."
     ${EndIf}
 
     ; Remove all files
-    DetailPrint "Removing all files..."
+    DetailPrint "Removing remaining files..."
+    SetDetailsPrint none ; Temporarily suppress details
     SetOutPath $TEMP
-    RMDir /r "$EXEDIR"
-    Delete '$EXEDIR\${project.filename}.jar'
-    DetailPrint "Finished"
-    SelfDel::Del /RMDIR ; !!!! FIXME: Kaspersky will detect this as an exploit/virus!
+    RMDir /r "$DELETE_DIR"
+
+    ; Remove self from $TEMP after reboot
+    Delete /REBOOTOK $EXEPATH
+
+    ${If} ${RunningX64}
+      ${EnableX64FSRedirection}
+    ${EndIf}
+    SetDetailsPrint both
+    DetailPrint "Completed"
+  ${Else}
+    ; We're NOT running from $TEMP, copy to temp and respawn ourself
+    GetTempFileName $0
+    CopyFiles "$EXEPATH" "$0"
+    Exec '"$0" /RESPAWN=1 /DELETE_DIR="$EXEDIR" /DELETE_EXE="$EXEPATH"'
+    Quit
+  ${EndIf}
 SectionEnd
 
 Function .onInit
-    ${If} ${RunningX64}
-        SetRegView 64
-        ${DisableX64FSRedirection}
-    ${EndIf}
+  ${If} ${RunningX64}
+    SetRegView 64
+    ${DisableX64FSRedirection}
+  ${EndIf}
 FunctionEnd
